<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp"
        tools:ignore="MissingConstraints">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordActual"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPasswordActual"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordNueva"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPasswoerdNueva"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPasswordConfirmar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/etPasswordComfirmar"
            android:inputType="textPassword"
            android:layout_marginTop="16dp"/>

        <Button
            android:id="@+id/btnConfirmar"
            android:text="@string/btnConfirmar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:minWidth="180dp"
            android:minHeight="56dp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>
        <Button
            android:id="@+id/btnCancelar"
            android:text="@string/btnCancelar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:padding="12dp"
            android:minWidth="180dp"
            android:minHeight="56dp"
            android:textStyle="bold"
            android:layout_marginTop="16dp"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>